--- a/HeartOfGold/HeartOfGold.csproj
+++ b/HeartOfGold/HeartOfGold.csproj
@@ -289,7 +289,7 @@
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
-    <Compile Include="ViewModels\NewItemViewModel.cs" />
+    <Compile Include="ViewModels\ItemFormViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap-paper.css" />
@@ -527,7 +527,7 @@
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
     <Content Include="Views\Item\Index.cshtml" />
     <Content Include="Views\Item\Details.cshtml" />
-    <Content Include="Views\Item\New.cshtml" />
+    <Content Include="Views\Item\ItemForm.cshtml" />
     <Content Include="Views\Help\ViewHelp.cshtml" />
     <Content Include="Views\Request\Index.cshtml" />
   </ItemGroup>
