--- a/HeartOfGold/HeartOfGold.csproj
+++ b/HeartOfGold/HeartOfGold.csproj
@@ -196,6 +196,7 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\DonorsController.cs" />
     <Compile Include="Controllers\HelpController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ItemController.cs" />
@@ -279,6 +280,14 @@
     <Compile Include="Migrations\201807111311453_AddFKCategoryToItem.cs" />
     <Compile Include="Migrations\201807111311453_AddFKCategoryToItem.Designer.cs">
       <DependentUpon>201807111311453_AddFKCategoryToItem.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201807152259204_AddRangeValidatorToItemQuantity.cs" />
+    <Compile Include="Migrations\201807152259204_AddRangeValidatorToItemQuantity.Designer.cs">
+      <DependentUpon>201807152259204_AddRangeValidatorToItemQuantity.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201807172249585_PopulateDonorTable.cs" />
+    <Compile Include="Migrations\201807172249585_PopulateDonorTable.Designer.cs">
+      <DependentUpon>201807172249585_PopulateDonorTable.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
@@ -529,7 +538,8 @@
     <Content Include="Views\Item\Details.cshtml" />
     <Content Include="Views\Item\ItemForm.cshtml" />
     <Content Include="Views\Help\ViewHelp.cshtml" />
-    <Content Include="Views\Request\Index.cshtml" />
+    <Content Include="Views\Request\RequestForm.cshtml" />
+    <Content Include="Views\Donors\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -605,6 +615,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201807111311453_AddFKCategoryToItem.resx">
       <DependentUpon>201807111311453_AddFKCategoryToItem.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201807152259204_AddRangeValidatorToItemQuantity.resx">
+      <DependentUpon>201807152259204_AddRangeValidatorToItemQuantity.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201807172249585_PopulateDonorTable.resx">
+      <DependentUpon>201807172249585_PopulateDonorTable.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
