Front end improvements
minor updates

--- a/HeartOfGold/HeartOfGold.csproj
+++ b/HeartOfGold/HeartOfGold.csproj
@@ -289,6 +289,26 @@
     <Compile Include="Migrations\201807172249585_PopulateDonorTable.Designer.cs">
       <DependentUpon>201807172249585_PopulateDonorTable.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201807181340183_AddRequestStatusModel.cs" />
+    <Compile Include="Migrations\201807181340183_AddRequestStatusModel.Designer.cs">
+      <DependentUpon>201807181340183_AddRequestStatusModel.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201807181341206_PopulateRequestStatusTable.cs" />
+    <Compile Include="Migrations\201807181341206_PopulateRequestStatusTable.Designer.cs">
+      <DependentUpon>201807181341206_PopulateRequestStatusTable.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201807181349177_RepopulateRequestStatusTable.cs" />
+    <Compile Include="Migrations\201807181349177_RepopulateRequestStatusTable.Designer.cs">
+      <DependentUpon>201807181349177_RepopulateRequestStatusTable.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201807211828204_RequestsTable.cs" />
+    <Compile Include="Migrations\201807211828204_RequestsTable.Designer.cs">
+      <DependentUpon>201807211828204_RequestsTable.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201807211831217_UpdateItemModelAddDonorId.cs" />
+    <Compile Include="Migrations\201807211831217_UpdateItemModelAddDonorId.Designer.cs">
+      <DependentUpon>201807211831217_UpdateItemModelAddDonorId.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Category.cs" />
@@ -296,6 +316,8 @@
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\Item.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
+    <Compile Include="Models\Request.cs" />
+    <Compile Include="Models\RequestStatus.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
     <Compile Include="ViewModels\ItemFormViewModel.cs" />
@@ -621,6 +643,21 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201807172249585_PopulateDonorTable.resx">
       <DependentUpon>201807172249585_PopulateDonorTable.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201807181340183_AddRequestStatusModel.resx">
+      <DependentUpon>201807181340183_AddRequestStatusModel.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201807181341206_PopulateRequestStatusTable.resx">
+      <DependentUpon>201807181341206_PopulateRequestStatusTable.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201807181349177_RepopulateRequestStatusTable.resx">
+      <DependentUpon>201807181349177_RepopulateRequestStatusTable.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201807211828204_RequestsTable.resx">
+      <DependentUpon>201807211828204_RequestsTable.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201807211831217_UpdateItemModelAddDonorId.resx">
+      <DependentUpon>201807211831217_UpdateItemModelAddDonorId.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
