--- a/HeartOfGold/packages.config
+++ b/HeartOfGold/packages.config
@@ -1,8 +1,16 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Antlr" version="3.5.0.2" targetFramework="net461" />
+  <package id="AutoMapper" version="4.1.0" targetFramework="net461" />
   <package id="bootstrap" version="3.3.7" targetFramework="net461" />
+  <package id="Chart.js" version="2.7.2" targetFramework="net461" />
   <package id="EntityFramework" version="6.2.0" targetFramework="net461" />
+  <package id="Galactic.ActiveDirectory" version="1.3.0.499" targetFramework="net461" />
+  <package id="Galactic.Configuration" version="1.3.0.499" targetFramework="net461" />
+  <package id="Galactic.Cryptography" version="1.3.0.499" targetFramework="net461" />
+  <package id="Galactic.EventLog" version="1.3.0.499" targetFramework="net461" />
+  <package id="Galactic.FileSystem" version="1.3.0.499" targetFramework="net461" />
+  <package id="Galactic.LDAP" version="1.3.0.499" targetFramework="net461" />
   <package id="jQuery" version="3.3.1" targetFramework="net461" />
   <package id="jquery.datatables" version="1.10.11" targetFramework="net461" />
   <package id="jQuery.Validation" version="1.17.0" targetFramework="net461" />
@@ -20,6 +28,10 @@
   <package id="Microsoft.AspNet.Razor" version="3.2.4" targetFramework="net461" />
   <package id="Microsoft.AspNet.TelemetryCorrelation" version="1.0.0" targetFramework="net461" />
   <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net461" />
+  <package id="Microsoft.AspNet.WebApi" version="5.2.3" targetFramework="net461" />
+  <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net461" />
+  <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net461" />
+  <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.3" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.4" targetFramework="net461" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="1.0.8" targetFramework="net461" />
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.4" targetFramework="net461" />
