--- a/HeartOfGold/HeartOfGold.csproj
+++ b/HeartOfGold/HeartOfGold.csproj
@@ -70,6 +70,21 @@
     <Reference Include="Galactic.LDAP, Version=1.3.0.499, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\Galactic.LDAP.1.3.0.499\lib\Galactic.LDAP.dll</HintPath>
     </Reference>
+    <Reference Include="Glimpse.Ado, Version=1.7.3.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Glimpse.Ado.1.7.3\lib\net45\Glimpse.Ado.dll</HintPath>
+    </Reference>
+    <Reference Include="Glimpse.AspNet, Version=1.8.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Glimpse.AspNet.1.8.0\lib\net45\Glimpse.AspNet.dll</HintPath>
+    </Reference>
+    <Reference Include="Glimpse.Core, Version=1.8.6.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Glimpse.1.8.6\lib\net45\Glimpse.Core.dll</HintPath>
+    </Reference>
+    <Reference Include="Glimpse.EF6, Version=1.6.5.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Glimpse.EF6.1.6.5\lib\net45\Glimpse.EF6.dll</HintPath>
+    </Reference>
+    <Reference Include="Glimpse.Mvc5, Version=1.5.3.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Glimpse.Mvc5.1.5.3\lib\net45\Glimpse.Mvc5.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System" />
     <Reference Include="System.Data" />
@@ -243,6 +258,7 @@
     <Compile Include="Controllers\ReportsController.cs" />
     <Compile Include="Controllers\RequestController.cs" />
     <Compile Include="Dtos\DonationDto.cs" />
+    <Compile Include="GlimpseSecurityPolicy.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -361,6 +377,10 @@
     <Compile Include="Migrations\201808021240116_SeedStudents.cs" />
     <Compile Include="Migrations\201808021240116_SeedStudents.Designer.cs">
       <DependentUpon>201808021240116_SeedStudents.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201808031511306_ChangeLengthOfStudentNumberForValidation.cs" />
+    <Compile Include="Migrations\201808031511306_ChangeLengthOfStudentNumberForValidation.Designer.cs">
+      <DependentUpon>201808031511306_ChangeLengthOfStudentNumberForValidation.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
@@ -730,6 +750,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201808021240116_SeedStudents.resx">
       <DependentUpon>201808021240116_SeedStudents.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201808031511306_ChangeLengthOfStudentNumberForValidation.resx">
+      <DependentUpon>201808031511306_ChangeLengthOfStudentNumberForValidation.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
