--- a/HeartOfGold/HeartOfGold.csproj
+++ b/HeartOfGold/HeartOfGold.csproj
@@ -382,6 +382,10 @@
     <Compile Include="Migrations\201808031511306_ChangeLengthOfStudentNumberForValidation.Designer.cs">
       <DependentUpon>201808031511306_ChangeLengthOfStudentNumberForValidation.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201808032152475_AddRequestsICollectionToApplicationUser.cs" />
+    <Compile Include="Migrations\201808032152475_AddRequestsICollectionToApplicationUser.Designer.cs">
+      <DependentUpon>201808032152475_AddRequestsICollectionToApplicationUser.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Category.cs" />
@@ -395,6 +399,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
     <Compile Include="ViewModels\ItemFormViewModel.cs" />
+    <Compile Include="ViewModels\RequestListViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap-paper.css" />
@@ -645,6 +650,9 @@
     <Content Include="Views\Request\RequestForm.cshtml" />
     <Content Include="Views\Donors\Index.cshtml" />
     <Content Include="Views\Reports\Index.cshtml" />
+    <Content Include="Views\Request\ViewRequests.cshtml" />
+    <Content Include="Views\Request\ViewMyRequests.cshtml" />
+    <Content Include="Views\Item\Edit.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -753,6 +761,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201808031511306_ChangeLengthOfStudentNumberForValidation.resx">
       <DependentUpon>201808031511306_ChangeLengthOfStudentNumberForValidation.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201808032152475_AddRequestsICollectionToApplicationUser.resx">
+      <DependentUpon>201808032152475_AddRequestsICollectionToApplicationUser.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
