--- a/HeartOfGold/HeartOfGold.csproj
+++ b/HeartOfGold/HeartOfGold.csproj
@@ -393,6 +393,10 @@
     <Compile Include="Migrations\201808032152475_AddRequestsICollectionToApplicationUser.Designer.cs">
       <DependentUpon>201808032152475_AddRequestsICollectionToApplicationUser.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201808121434123_AddNameAndSurnameToApplicationUserTable.cs" />
+    <Compile Include="Migrations\201808121434123_AddNameAndSurnameToApplicationUserTable.Designer.cs">
+      <DependentUpon>201808121434123_AddNameAndSurnameToApplicationUserTable.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Category.cs" />
@@ -777,6 +781,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201808032152475_AddRequestsICollectionToApplicationUser.resx">
       <DependentUpon>201808032152475_AddRequestsICollectionToApplicationUser.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201808121434123_AddNameAndSurnameToApplicationUserTable.resx">
+      <DependentUpon>201808121434123_AddNameAndSurnameToApplicationUserTable.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
