--- a/HeartOfGold/HeartOfGold.csproj
+++ b/HeartOfGold/HeartOfGold.csproj
@@ -411,6 +411,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
     <Compile Include="ViewModels\ChartViewModel.cs" />
+    <Compile Include="ViewModels\DonorViewModel.cs" />
     <Compile Include="ViewModels\ItemFormViewModel.cs" />
     <Compile Include="ViewModels\RequestListViewModel.cs" />
     <Compile Include="ViewModels\StatisticsViewModel.cs" />
