--- a/HeartOfGold/packages.config
+++ b/HeartOfGold/packages.config
@@ -18,6 +18,7 @@
   <package id="Glimpse.Mvc5" version="1.5.3" targetFramework="net461" />
   <package id="jQuery" version="3.3.1" targetFramework="net461" />
   <package id="jquery.datatables" version="1.10.11" targetFramework="net461" />
+  <package id="jQuery.UI.Combined" version="1.12.1" targetFramework="net461" />
   <package id="jQuery.Validation" version="1.17.0" targetFramework="net461" />
   <package id="Microsoft.ApplicationInsights" version="2.5.1" targetFramework="net461" />
   <package id="Microsoft.ApplicationInsights.Agent.Intercept" version="2.4.0" targetFramework="net461" />
