--- a/HeartOfGold/packages.config
+++ b/HeartOfGold/packages.config
@@ -5,12 +5,6 @@
   <package id="bootstrap" version="3.3.7" targetFramework="net461" />
   <package id="Chart.js" version="2.7.2" targetFramework="net461" />
   <package id="EntityFramework" version="6.2.0" targetFramework="net461" />
-  <package id="Galactic.ActiveDirectory" version="1.3.0.499" targetFramework="net461" />
-  <package id="Galactic.Configuration" version="1.3.0.499" targetFramework="net461" />
-  <package id="Galactic.Cryptography" version="1.3.0.499" targetFramework="net461" />
-  <package id="Galactic.EventLog" version="1.3.0.499" targetFramework="net461" />
-  <package id="Galactic.FileSystem" version="1.3.0.499" targetFramework="net461" />
-  <package id="Galactic.LDAP" version="1.3.0.499" targetFramework="net461" />
   <package id="Glimpse" version="1.8.6" targetFramework="net461" />
   <package id="Glimpse.Ado" version="1.7.3" targetFramework="net461" />
   <package id="Glimpse.AspNet" version="1.8.0" targetFramework="net461" />
@@ -57,7 +51,13 @@
   <package id="Owin" version="1.0" targetFramework="net461" />
   <package id="PagedList" version="1.17.0.0" targetFramework="net461" />
   <package id="PagedList.Mvc" version="4.5.0.0" targetFramework="net461" />
+  <package id="Sendgrid" version="9.10.0" targetFramework="net461" />
   <package id="System.Diagnostics.DiagnosticSource" version="4.4.1" targetFramework="net461" />
+  <package id="System.Net.Http" version="4.3.3" targetFramework="net461" />
+  <package id="System.Security.Cryptography.Algorithms" version="4.3.0" targetFramework="net461" />
+  <package id="System.Security.Cryptography.Encoding" version="4.3.0" targetFramework="net461" />
+  <package id="System.Security.Cryptography.Primitives" version="4.3.0" targetFramework="net461" />
+  <package id="System.Security.Cryptography.X509Certificates" version="4.3.0" targetFramework="net461" />
   <package id="toastr" version="2.1.1" targetFramework="net461" />
   <package id="WebGrease" version="1.6.0" targetFramework="net461" />
 </packages>
