--- a/HeartOfGold/packages.config
+++ b/HeartOfGold/packages.config
@@ -5,6 +5,7 @@
   <package id="bootstrap" version="3.3.7" targetFramework="net461" />
   <package id="Chart.js" version="2.7.2" targetFramework="net461" />
   <package id="EntityFramework" version="6.2.0" targetFramework="net461" />
+  <package id="fullcalendar" version="3.9.0" targetFramework="net461" />
   <package id="Glimpse" version="1.8.6" targetFramework="net461" />
   <package id="Glimpse.Ado" version="1.7.3" targetFramework="net461" />
   <package id="Glimpse.AspNet" version="1.8.0" targetFramework="net461" />
@@ -47,6 +48,7 @@
   <package id="Microsoft.Owin.Security.Twitter" version="4.0.0" targetFramework="net461" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net461" />
   <package id="Modernizr" version="2.8.3" targetFramework="net461" />
+  <package id="Moment.js" version="2.9.0" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="11.0.1" targetFramework="net461" />
   <package id="Owin" version="1.0" targetFramework="net461" />
   <package id="PagedList" version="1.17.0.0" targetFramework="net461" />
