--- a/HeartOfGold/HeartOfGold.csproj
+++ b/HeartOfGold/HeartOfGold.csproj
@@ -388,6 +388,14 @@
     <Compile Include="Migrations\201810191837256_AddEventModelAndDbSet.Designer.cs">
       <DependentUpon>201810191837256_AddEventModelAndDbSet.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201810231430485_AddIsRepeatPropertyToRequestModel.cs" />
+    <Compile Include="Migrations\201810231430485_AddIsRepeatPropertyToRequestModel.Designer.cs">
+      <DependentUpon>201810231430485_AddIsRepeatPropertyToRequestModel.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201810232028085_AddDowToEventModel.cs" />
+    <Compile Include="Migrations\201810232028085_AddDowToEventModel.Designer.cs">
+      <DependentUpon>201810232028085_AddDowToEventModel.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Category.cs" />
@@ -1009,6 +1017,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201810191837256_AddEventModelAndDbSet.resx">
       <DependentUpon>201810191837256_AddEventModelAndDbSet.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201810231430485_AddIsRepeatPropertyToRequestModel.resx">
+      <DependentUpon>201810231430485_AddIsRepeatPropertyToRequestModel.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201810232028085_AddDowToEventModel.resx">
+      <DependentUpon>201810232028085_AddDowToEventModel.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
